[tool.poetry]
name = "advent"
version = "0.1.0"
description = ""
authors = ["ruud.wassink <ruud.wassink@edsn.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyterlab = "^4.3.3"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
